# wolf_transcriptions

./: README.md  converter.py  index.html  pyproject.toml  wolf_to_webvtt.html
examples/: 40000000497844.txt  40000000497927.txt  AWM DAT 106 (framerate).txt  invalid.vtt
js/: main.js
js/pyscript/: codemirror-Bpb6Ey5f.js  codemirror-Bpb6Ey5f.js.map  codemirror_lang-python-CT4R7aU5.js  codemirror_lang-python-CT4R7aU5.js.map  core-DlvYU3OZ.js  core-DlvYU3OZ.js.map  core.js  deprecations-manager-D2oeE--a.js  deprecations-manager-D2oeE--a.js.map  donkey-BrIehEwe.js  donkey-BrIehEwe.js.map  error-CGGNJnMJ.js  error-CGGNJnMJ.js.map  index-BI1TrUla.js  index-BI1TrUla.js.map  mpy-49r-ARjR.js  mpy-49r-ARjR.js.map  py-DZ9P39Fr.js  py-DZ9P39Fr.js.map  py-editor-Dil8sfoT.js  py-editor-Dil8sfoT.js.map  py-game-wZnH0cJT.js  py-game-wZnH0cJT.js.map  py-terminal-D4qhEdOa.js  py-terminal-D4qhEdOa.js.map
py/: converter.py  main.py  pyscript.toml
